{
    "name": "TouchController",
    "maps": [
        {
            "name": "Touch",
            "id": "54602beb-19fe-4a43-b09e-b5c4b476c9b2",
            "actions": [
                {
                    "name": "PrimaryFingerPosition",
                    "type": "Value",
                    "id": "1b4058f3-e246-4ba1-800b-fab78783b83a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PrimaryTouchContact",
                    "type": "Button",
                    "id": "3f9b4d89-d8d9-4a14-8cc8-f90185466d47",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "PrimaryTouchHold",
                    "type": "Button",
                    "id": "f8cb5e17-45d5-4e42-902b-0d8384789a59",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.2,pressPoint=0.1)"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "420a1f4d-ff7a-4d5b-9b8d-001235fc990f",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryFingerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "306fdefd-4ee8-4b40-8913-95cafebcb734",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryTouchContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a4e143a7-cf81-47fa-a583-2405cfe7768c",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryTouchHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}